--- a/rrm/static/css/styles.css
+++ b/rrm/static/css/styles.css
@@ -7,7 +7,8 @@ body {
     background-color: #11131a;
 }
 
-.navbar-brand, .nav-link {
+.navbar-brand,
+.nav-link {
     color: #60a5fa !important;
 }
 
