--- a/rrm/templates/student/login.html
+++ b/rrm/templates/student/login.html
@@ -1,20 +1,28 @@
 {% extends "student/baseauth.html" %}
 {% block title %}Student Login{% endblock %}
 {% block content %}
-    <h3 class="text-center mb-3" style="color: #2ea043;">Student Login</h3>
+<h3 class="text-center mb-3 auth-h3">Student Login</h3>
 
-    <form action="{{ url_for('student.login') }}" method="post">
-        <div class="mb-3">
-            <label for="regno" class="form-label">Registration Number</label>
-            <input type="number" class="form-control" id="regno" name="regno" placeholder="Enter registration number" required pattern="\\d{8}">
-        </div>
+<form action="{{ url_for('student.login') }}" method="post">
+    <div class="mb-3">
+        <label for="regno" class="form-label">Registration Number</label>
+        <input type="number" class="form-control" id="regno" name="regno" placeholder="Enter registration number"
+            required pattern="\\d{8}">
+    </div>
 
-        <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
-        </div>
+    <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
+    </div>
 
-        <button type="submit" class="btn btn-green w-100 mt-2">Login</button>
-        <p class="text-center mt-3" style="color: #f5f5ff;">Don't have an account? <a href="{{ url_for('student.register') }}" style="color: #60a5fa; text-decoration: underline;">Register here</a></p>
-    </form>
+    <div class="mb-3">
+        <input type="checkbox" class="form-check-input" id="showPassword" onclick="togglePassword()">
+        <label for="showPassword" class="form-label">Show Password</label>
+    </div>
+
+    <button type="submit" class="btn btn-green w-100 mt-2">Login</button>
+    <p class="text-center mt-3" style="color: #f5f5ff;">Don't have an account? <a
+            href="{{ url_for('student.register') }}" style="color: #60a5fa; text-decoration: underline;">Register
+            here</a></p>
+</form>
 {% endblock %}
