--- a/rrm/templates/admin/dashboard.html
+++ b/rrm/templates/admin/dashboard.html
@@ -7,8 +7,7 @@
     <div class="row g-4">
         <div class="col-12 col-md-6">
             <div class="card p-4 text-center">
-                <h4>Seats Occupied</h4>
-                <h2>{{ n_occupied }} / {{ total }}</h2>
+                <h2>Laptop Seats: {{ laptop_occupied }}/{{ total_laptop }} <br>Non-Laptop Seats: {{ non_laptop_occupied }}/{{ total_non_laptop }}</h2>
                 <a href="{{ url_for('admin.entries', page=1) }}" class="btn btn-blue mt-3">See More</a>
             </div>
         </div>
