--- a/rrm/templates/admin/baseadmin.html
+++ b/rrm/templates/admin/baseadmin.html
@@ -91,6 +91,13 @@
             color: #60a5fa;
             font-weight: 500;
             text-align: center;
+            overflow: hidden;
+        }
+
+        .result {
+            margin-top: 10px;
+            color: #60a5fa;
+            font-size: 18px;
         }
     </style>
 </head>
