--- a/rrm/templates/admin/baseadmin.html
+++ b/rrm/templates/admin/baseadmin.html
@@ -7,99 +7,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://unpkg.com/html5-qrcode"></script>
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}"> -->
-    <style>
-        body {
-            background-color: #0b0f19;
-            color: white;
-        }
-
-        .navbar {
-            background-color: #11131a;
-        }
-
-        .navbar-brand,
-        .nav-link {
-            color: #60a5fa !important;
-        }
-
-        .nav-link:hover {
-            color: #2563eb !important;
-        }
-
-        .navbar-toggler {
-            border-color: #ffffff;
-        }
-
-        .navbar-toggler-icon {
-            background-image: none;
-            width: 30px;
-            height: 22px;
-            position: relative;
-        }
-
-        .navbar-toggler-icon::before,
-        .navbar-toggler-icon::after,
-        .navbar-toggler-icon div {
-            content: '';
-            background-color: #ffffff;
-            height: 4px;
-            width: 100%;
-            position: absolute;
-            left: 0;
-            border-radius: 2px;
-        }
-
-        .navbar-toggler-icon::before {
-            top: 0;
-        }
-
-        .navbar-toggler-icon div {
-            top: 9px;
-        }
-
-        .navbar-toggler-icon::after {
-            bottom: 0;
-        }
-
-        .card {
-            background-color: #11131a;
-            border: 1px solid #3b82f6;
-            border-radius: 12px;
-            color: azure !important;
-        }
-
-        .btn-blue {
-            background-color: #2563eb;
-            color: white;
-        }
-
-        .btn-blue:hover {
-            background-color: #1d4ed8;
-        }
-
-        .scanner-box {
-            width: 100%;
-            max-width: 400px;
-            height: 250px;
-            margin: 20px auto;
-            background-color: #1e293b;
-            border: 2px dashed #3b82f6;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #60a5fa;
-            font-weight: 500;
-            text-align: center;
-            overflow: hidden;
-        }
-
-        .result {
-            margin-top: 10px;
-            color: #60a5fa;
-            font-size: 18px;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 
 <body>
