--- a/rrm/templates/admin/baseadmin.html
+++ b/rrm/templates/admin/baseadmin.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('student.home') }}">Homepage</a></li>
                     <li class="nav-item"><a class="nav-link active"
                             href="{{ url_for('admin.dashboard') }}">Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.entries', page=1) }}">Entries
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.entries', date=current_date) }}">Entries
                             List</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.box_status') }}">Box Status</a>
                     </li>
