--- a/rrm/templates/admin/dashboard.html
+++ b/rrm/templates/admin/dashboard.html
@@ -9,7 +9,7 @@
             <div class="card p-4 text-center">
                 <h2>Laptop Seats: {{ laptop_occupied }}/{{ total_laptop }} <br>Non-Laptop Seats: {{ non_laptop_occupied
                     }}/{{ total_non_laptop }}</h2>
-                <a href="{{ url_for('admin.entries', page=1) }}" class="btn btn-blue mt-3">See More</a>
+                <a href="{{ url_for('admin.entries', date=current_date) }}" class="btn btn-blue mt-3">See More</a>
             </div>
         </div>
         <div class="col-12 col-md-6">
