--- a/rrm/templates/admin/dashboard.html
+++ b/rrm/templates/admin/dashboard.html
@@ -21,7 +21,7 @@
                 <!-- Hidden field to store scanned regno -->
                 <input type="hidden" id="qrRegno" name="regno">
                 <div>
-                    <button class="btn btn-blue mt-2" onclick="startCamera()">Start Scanner</button>
+                    <button class="btn btn-blue mt-2" onclick="startCamera()">Restart Camera</button>
                     <button class="btn btn-blue mt-2" onclick="switchCamera()">Switch Camera</button>
                 </div>
                 <div class="result" id="result">Waiting for scan...</div>
