--- a/rrm/templates/admin/baseadmin.html
+++ b/rrm/templates/admin/baseadmin.html
@@ -27,8 +27,7 @@
                             href="{{ url_for('admin.dashboard') }}">Dashboard</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.entries', date=current_date) }}">Entries
                             List</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.box_status') }}">Box Status</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.box_control') }}">Box Control</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('student.logout') }}">Logout</a></li>
                 </ul>
             </div>
